--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,33 +1,23 @@
-.home-section {
-    height: 100vh;
+.lottie-container {
     display: flex;
-    justify-content: center; /* Centers content horizontally */
-    align-items: center; /* Centers content vertically */
-    background-color: #0d0d0d; /* Dark background */
-    position: relative;
-    color: #fff; /* White text for contrast */
-    overflow: hidden;
-    text-align: center; /* Ensures all text is centered */
+    justify-content: center;
+    margin-bottom: 2rem;
   }
   
   .home-container {
     text-align: center;
-    z-index: 2; /* Ensures the text stays above the particles */
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center horizontally */
-    justify-content: center; /* Center vertically */
+    z-index: 2;
   }
   
   .home-title {
     font-size: 3.5rem;
     margin-bottom: 1rem;
     font-weight: bold;
-    color: #fff;
+    color: #509677;
   }
   
   .highlighted-text {
-    color: #ff4b4b; /* Red accent color for name */
+    color: #ff4b4b;
   }
   
   .home-subtitle {
@@ -54,14 +44,5 @@
   
   .arrow {
     margin-left: 0.5rem;
-  }
-  
-  .particles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1; /* Behind the text */
-    top: 0;
-    left: 0;
   }
   
