--- a/src/components/home.css
+++ b/src/components/home.css
@@ -7,15 +7,12 @@ html, body {
   overflow: hidden;
 }
 
-#particle-slider {
-  position: absolute;
+canvas {
+  display: block;
   width: 100%;
   height: 100vh;
-  top: 0;
-  left: 0;
-  z-index: 2; /* ParticleSlider is above the button */
-  pointer-events: none; /* Prevent ParticleSlider from blocking interaction */
 }
+
 
 .draw {
   position: absolute;
