--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,10 @@ body > .dg {
     display: block;
   }
 }
+#particle-slider {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  overflow: hidden;
+}
+
