--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   display: flex; /* Use flexbox for vertical and horizontal centering */
+  overflow: hidden;
 
 
 }
@@ -14,7 +15,15 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
   pointer-events: none; /* Ensure the canvas doesn't block button interaction */
+}
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: visible;
+  z-index: 1; /* Ensure the particles stay behind the text */
 }
