--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,5 @@
 /* General Reset */
+
 html, body {
   background-color: #0d0d0d; /* Dark background color */
   width: 100%;
@@ -6,8 +7,7 @@ html, body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  font-family: 'Montserrat', sans-serif; /* Matching the font */
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  font-family: 'Proximo';
 }
 
 /* Hero Section */
@@ -92,8 +92,8 @@ html, body {
   width: 100%;
   background-color: rgba(51, 51, 51, 0.9); /* Transparent dark background */
   display: flex;
-  justify-content: center;
-  padding: 15px 0;
+  justify-content: left;
+  padding: 10px 0px;
   z-index: 1000;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease;
@@ -102,11 +102,11 @@ html, body {
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 40px;
+  gap: 30px;
   margin: 0;
   padding: 0;
   font-size: 15px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
 }
 
@@ -118,9 +118,9 @@ html, body {
 .nav-links a {
   color: white;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: .8rem;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
+  font-weight: bold;
   transition: color 0.3s ease;
 }
 
