--- a/src/components/home.css
+++ b/src/components/home.css
@@ -97,7 +97,7 @@ html, body {
   z-index: 1000;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease;
-}
+  font-family: 'Proximo';}
 
 .nav-links {
   list-style: none;
@@ -107,8 +107,7 @@ html, body {
   padding: 0;
   font-size: 15px;
   text-transform: capitalize;
-  font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
-}
+  font-family: 'Proximo';}
 
 .nav-links li {
   margin: 0 20px;
@@ -119,7 +118,7 @@ html, body {
   color: white;
   text-decoration: none;
   font-size: .8rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Proximo', sans-serif;
   font-weight: bold;
   transition: color 0.3s ease;
 }
