--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -1,7 +1,8 @@
 .pixel-effect-container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  padding: 100px;
+  height: 300vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,39 +20,5 @@
   pointer-events: none; /* Ensure the canvas doesn't block interaction */
 }
 
-/* Adjust the text styling to avoid overlap */
-.heading {
-  position: relative;
-  z-index: 3;
-  text-align: center;
-  color: white;
-  margin-top: 150px; /* Add space to push the content down */
-}
 
-.heading__line-1 {
-  font-size: 4rem;
-  font-weight: 600;
-  color: white;
-  margin: 0;
-  line-height: 1.2;
-}
 
-.heading__line-2 {
-  font-size: 1.8rem;
-  font-weight: 400;
-  color: #f2f2f2;
-  margin-top: 10px;
-}
-
-.custom-button {
-  display: inline-block;
-  padding: 15px 35px;
-  color: #ff4a56;
-  text-decoration: none;
-  font-size: 1.3rem;
-  font-weight: bold;
-  border: 2px solid #ff4a56;
-  border-radius: 8px;
-  margin-top: 25px;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
