--- a/src/components/about.css
+++ b/src/components/about.css
@@ -2,7 +2,7 @@
   padding: 0px 20px;
   text-align: center;
   color: #fafafa;
-  background-color: #0d0d0d;
+  background-color: #02192f; /* dark blue background color */
 }
 
 .about-title {
