--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,7 +1,7 @@
 /* Contact Section */
 .contact {
   padding: 50px;
-  background-color: #0d0d0d; /* Dark background to match the design */
+  background-color: #02192f; /* dark blue background color */ /* dark blue background color */
   text-align: center;
   color: white;
 }
