--- a/src/components/about.css
+++ b/src/components/about.css
@@ -5,15 +5,16 @@
   background-color: #02192f; /* dark blue background color */
 }
 
-.about-title {
+.title {
   font-size: 3rem;
   font-weight: bold;
   color: white;
   margin-bottom: 20px;
   position: relative;
+
 }
 
-.about-title::after {
+.title::after {
   content: '';
   display: block;
   width: 60px;
