--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,6 +1,7 @@
 /* Contact Section */
 .contact {
-  padding: 50px;
+  padding: 0px;
+  padding-bottom: 50px;
   background-color: #02192f; /* dark blue background color */ /* dark blue background color */
   text-align: center;
   color: white;
