--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -12,15 +12,14 @@
 }
 
 .pixel-canvas {
+  display: block;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
-  width: 100vw;
-  height: 100vh;
-  pointer-events: none; /* Ensure the canvas doesn't block interaction */
-  
 }
+
 
 
 
